<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Dialog</class>
 <widget class="QDialog" name="Dialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>522</width>
    <height>442</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <widget class="QTableWidget" name="tableWidget">
   <property name="geometry">
    <rect>
     <x>260</x>
     <y>200</y>
     <width>741</width>
     <height>371</height>
    </rect>
   </property>
   <property name="columnCount">
    <number>11</number>
   </property>
   <column>
    <property name="text">
     <string>Date</string>
    </property>
   </column>
   <column>
    <property name="text">
     <string>FIPS</string>
    </property>
   </column>
   <column>
    <property name="text">
     <string>Week</string>
    </property>
   </column>
   <column>
    <property name="text">
     <string>Dist_Total</string>
    </property>
   </column>
   <column>
    <property name="text">
     <string>Dist_Janssen</string>
    </property>
   </column>
   <column>
    <property name="text">
     <string>Dist_Moderna</string>
    </property>
   </column>
   <column>
    <property name="text">
     <string>Dist_Pfizer</string>
    </property>
   </column>
   <column>
    <property name="text">
     <string>Given_Total</string>
    </property>
   </column>
   <column>
    <property name="text">
     <string>Given_Janssen</string>
    </property>
   </column>
   <column>
    <property name="text">
     <string>Given_Moderna</string>
    </property>
   </column>
   <column>
    <property name="text">
     <string>Given_Pfizer</string>
    </property>
   </column>
  </widget>
  <widget class="QLabel" name="label">
   <property name="geometry">
    <rect>
     <x>420</x>
     <y>90</y>
     <width>421</width>
     <height>91</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font-size: 30px;
font: bold;
color: rgb(255, 222, 222);
color: rgb(255, 151, 151);</string>
   </property>
   <property name="text">
    <string>View Vaccine Brand Data</string>
   </property>
   <property name="alignment">
    <set>Qt::AlignCenter</set>
   </property>
  </widget>
  <widget class="QWidget" name="widget" native="true">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>201</width>
     <height>851</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">
background-color: rgb(255, 222, 222);</string>
   </property>
   <widget class="QPushButton" name="backbutton7">
    <property name="geometry">
     <rect>
      <x>40</x>
      <y>120</y>
      <width>111</width>
      <height>51</height>
     </rect>
    </property>
    <property name="text">
     <string>Back</string>
    </property>
   </widget>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
